--- a/index.html
+++ b/index.html
@@ -2,5 +2,6 @@
 <html>
    <body>
       <p>Radio check. Pilot, please confirm.</p>
+      <p>Pilot, confirming. Radio, what's your status?</p>
    </body>
 </html> 
