responding to pilot with takeoff

--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
    <body>
       <p>Radio check. Pilot, please confirm.</p>
       <p>Pilot, confirming. Radio, what's your status?</p>
+      <p>Yes, pilot, control confirms your response. You are clear for takeoff.</p>
    </body>
 </html> 
